# job-bot

./: README.md  pyproject.toml
job_bot/spider/: spider.py
job_bot/telegram/: bot.py
