[tool.poetry]
name = "job-bot"
version = "0.1.0"
description = ""
authors = ["scary sources <scarysources@tutanota.org>"]
readme = "README.md"
packages = [{include = "job_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
scrapy = "^2.10.1"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
